day4/weather/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: weather-deploy
  namespace: weather

spec:
  replicas: 1
  
  selector:
    matchLabels:
      app.kubernetes.io/name: weather-app
  
  template:
    metadata:
      name: weather-container
      labels:
        app.kubernetes.io/name: weather-app
        app.kubernetes.io/version: "v1"
    
    spec:
      containers:
      - name: weather
        image: stackupiss/weather:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "50M"
        ports: 
        - name: w-app-port
          containerPort: 3000
      restartPolicy: Always
