day4/weather/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: weather-gateway
  namespace: weather

spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http-port
      number: 80
      protocol: HTTP
    hosts:
    - weather.139.59.222.252.nip.io
