day4/weather/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule

metadata:
  name: weather-dest-rule
  namespace: weather
  
spec:
  host: "*"
  subsets:
  - name: weather-least-conn
    trafficPolicy:
      loadBalancer:
        simple: LEAST_CONN
