day4/weather/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
   name: weather-vs
   namespace: weather

spec:
  hosts:
  - "*"
  
  gateways:
  - weather-gateway
  
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: weather-service
        subset: weather-least-conn
